--- a/index.html
+++ b/index.html
@@ -1,67 +1,3 @@
-<!doctype html>
-
-
-<html class="no-js" lang="">
-
-
-<head>
-<meta charset="utf-8">
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Harsh Patel</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/jquery.fancybox.css">
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/responsive.css">
-<link rel="stylesheet" href="css/animate.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-</head>
-
-<body>
-
-<section class="banner" role="banner">
-  <header id="header"> 
-  </header>
-  
-  <!-- banner text -->
-  <div class="container">
-    <div class="col-md-10 col-md-offset-1">
-      <div class="banner-text text-center">
-      	<img src="dp.jpg" width="300" height="300" style="margin-top: -200px;">
-        <h1>Hey, I’m Harsh Patel</h1>
-        <h3 style="color:white;font-weight: bold;">Computer Programmer</h3>
-        <p style="margin-top: 100px;"> Contact Me : 9898292451<br>harshgp44@gmail.com</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<footer class="section footer">
-      <div class="col-md-12">
-        <p>
-        <ul class="footer-share">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
-          
-        </ul>
-        </p>
-        <p>
-          Made with <i class="fa fa-heart pulse"></i> by  Harsh Patel</p>
-      </div>
-    </div>
-  </div>
-</footer>
-<!-- footer --> 
-
-<!-- JS FILES --> 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-<script src="js/bootstrap.min.js"></script> 
-<script src="js/jquery.fancybox.pack.js"></script> 
-<script src="js/jquery.waypoints.min.js"></script> 
-<script src="js/retina.min.js"></script> 
-<script src="js/modernizr.js"></script> 
-<script src="js/main.js"></script>
-</body>
-</html>
+---
+layout: default
+---
